--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -71,6 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:inputType="date"
+                    android:ems="10"
                     android:text="-"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
@@ -82,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_gravity="right"
-                    android:gravity="right"
+                    android:gravity="end"
                     android:inputType="time"
                     android:text="/-"
                     android:textColor="#FFFFFF"
